# hypr-window-rules

./: Cargo.toml  README.md  example.yaml
src/: config.rs  main.rs
src/hyprland/: events.rs  mod.rs  rules.rs  send.rs
